# serializer version: 1
# name: TestPatternCriterion.test_filter_single_trajectory[event-pattern0]
  '''
  patient_id,date,event_type,provider
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-10-16,EMERGENCY,LABORATORY
  
  '''
# ---
# name: TestPatternCriterion.test_filter_single_trajectory[interval-pattern1]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  
  '''
# ---
# name: TestPatternCriterion.test_filter_single_trajectory_inplace[event-pattern0]
  '''
  patient_id,date,event_type,provider
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-10-16,EMERGENCY,LABORATORY
  
  '''
# ---
# name: TestPatternCriterion.test_filter_single_trajectory_inplace[interval-pattern1]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  
  '''
# ---
# name: TestPatternCriterion.test_filter_single_trajectory_multiple_patterns[event-pattern0]
  '''
  patient_id,date,event_type,provider
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  
  '''
# ---
# name: TestPatternCriterion.test_filter_single_trajectory_multiple_patterns[interval-pattern1]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  3,2023-09-24,2023-10-21,PAIN_RELIEVER,ORAL,2
  
  '''
# ---
